# crm.hey.sh

./: .gitignore  ARCHITECTURE.md  CONVENTIONS.md  Justfile  LLM.md  OWNERSHIP_PLAN.md  PROJECT.md  README.md  Rust-Best-Practices-v2.md  TASKS.md  docker-compose.yml  future-additions.md  spec.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  mobile-ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  Justfile  LEARNING_GUIDE.md  build.rs
backend/config/: base.yaml  development.yaml  production.yaml
backend/mcp-server/: Cargo.toml
backend/mcp-server/src/: config.rs  error.rs  handlers.rs  main.rs  protocol.rs  tools.rs
backend/schema/: init.surql
backend/src/: config.rs  db.rs  error.rs  main.rs  secrets.rs
backend/src/ai/: ai_email.rs  ai_landing_page.rs  ai_social.rs  ai_summary.rs  mod.rs
backend/src/domain/: contact.rs  engagement.rs  errors.rs  mod.rs  validation.rs
backend/src/handlers/: analytics.rs  campaigns.rs  companies.rs  contacts.rs  events.rs  health.rs  landing_pages.rs  mod.rs  timeline.rs
backend/src/llm_tools/: README.md  __init__.py  crm_tools.py  requirements.txt
backend/src/llm_tools/examples/: claude_tools.py  langchain_agent.py  openai_functions.py
backend/src/models/: campaign.rs  company.rs  contact.rs  event.rs  mod.rs  timeline.rs
backend/src/repositories/: contact_repository.rs  mod.rs
backend/src/services/: campaign_executor.rs  contact_service.rs  mod.rs  segment_builder.rs
docs/: MCP-ROADMAP.md
frontend/: Dockerfile  Justfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/campaigns/: page.tsx
frontend/src/app/campaigns/new/: page.tsx
frontend/src/app/contacts/: page.tsx
frontend/src/app/contacts/[id]/: page.tsx
frontend/src/components/dashboard/: campaign-overview.tsx  recent-activity.tsx  stats-card.tsx  upcoming-events.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api.ts
infra/: Justfile
infra/k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml.example  surrealdb-statefulset.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mobile/: App.tsx  Justfile  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/crmmobile/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/CrmMobile/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
mobile/ios/CrmMobile.xcodeproj/: project.pbxproj
mobile/ios/CrmMobile.xcodeproj/xcshareddata/xcschemes/: CrmMobile.xcscheme
mobile/ios/CrmMobileTests/: CrmMobileTests.m
mobile/src/lib/: api.ts  revenuecat.ts  useSubscription.ts
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: ContactDetailScreen.tsx  ContactsScreen.tsx  EventsScreen.tsx  HomeScreen.tsx  NotificationsScreen.tsx  SubscriptionScreen.tsx
proto/: analytics.proto  campaign.proto  notification.proto
