[package]
name = "crm-backend"
version = "0.1.0"
edition = "2024"
description = "CRM.HEY.SH Backend - Rust/Axum API Server"
authors = ["hey.sh team"]

[workspace.metadata.rust-version]
rust-version = "1.76"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = { version = "0.14", features = ["yaml"] }

# Database
surrealdb = { version = "1", features = ["protocol-http"] }

# Secret management (optional)
# googleapis-tonic-google-cloud-secret-... would be the actual crate for GCP
# Using generic secret-vault crate instead for broader compatibility
secret-vault = { version = "1", optional = true }
vault = { version = "10", optional = true }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# gRPC
tonic = "0.11"
prost = "0.12"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
regex = "1"
once_cell = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
pretty_assertions = "1"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "crm-server"
path = "src/main.rs"
