[package]
name = "crm-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for CRM.HEY.SH"
authors = ["CRM.HEY.SH Team"]

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - reuse from main backend
surrealdb = "1.1"

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for REST API calls if needed)
reqwest = { version = "0.11", features = ["json"] }

# Async streams
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "crm-mcp-server"
path = "src/main.rs"
